--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Pacifico&display=swap');
       </style>
-    <title>React App</title>
+    <title>Tutor App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
